refact: now using house-made library called COMET for config stuff